<resources>
    <string name="app_name">FoodFinderApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_login">Login</string>
    <string name="login_title">FodFinderLogin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_title">FoodFinderRegister</string>
    <string name="title_profile">Profile</string>
    <string name="action_profile">Profile</string>
    <string name="search">Search</string>
    <string name="add_restaurant">Add Restaurant</string>
    <string name="menu_map">Map</string>
    <string name="Map">Map</string>
    <string name="feedback">Feedback</string>
    <string name="MeAboutActivity">MeAboutActivity</string>
    <string name="measactivity">MeAsActivity</string>
    <string name="meorderactivity">MeOrderActivity</string>
    <string name="mycouponactivity">MyCouponActivity</string>
    <string name="restaurant">Resaurant</string>
    <string name="cafe">Cafe</string>
    <string name="bar">Bar</string>
    <string name="title_activity_my_restaurant">MyRestaurant</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_compose_restaurant">ComposeRestaurant</string>
    <string name="my_restaurant">my Restaurant</string>
    <string name="title_activity_restaurant_detail">RestaurantDetailActivity</string>
    <string name="add_restaurant_sample">Add Sample</string>
    <string name="Location">locationActivity</string>
</resources>