<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="app.foodfinderapp.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="app.foodfinderapp.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_my_restaurant"
        android:name="app.foodfinderapp.MyRestaurantFragment"
        android:label="@string/my_restaurant"
        tools:layout="@layout/fragment_my_restaurant" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="app.foodfinderapp.ui.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_add_restaurant"
        android:name="app.foodfinderapp.ui.AddRestaurantFragment"
        android:label="@string/add_restaurant"
        tools:layout="@layout/add_restaurant" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="app.foodfinderapp.MapFragment"
        android:label="@string/Map"
        tools:layout="@layout/fragment_map" />


</navigation>